--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ license-file = "LICENSE"
 authors = ["Colleen <colleen@colleen05.me>"]
 
 [[bin]]
-name = "client"
+name = "client-cli"
 
 [[bin]]
-name = "server"
+name = "server-cli"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
